fix: alignement en mode tablette

--- a/mobile.css
+++ b/mobile.css
@@ -65,6 +65,7 @@
         padding-top: 10%;  
         padding-right: 0;         
     }
+    
 
   header span
     {
@@ -163,6 +164,7 @@
         padding-bottom: 8%;
         padding-left: 6%;
         margin-left: 0;
+        padding-top: 5%;
     }
 
     #information-description
@@ -239,6 +241,11 @@
    {
        height: 115px;       
    } 
+
+   .card-image img
+   {
+     min-height: 0;
+   }
 
    .card-description
    {
