--- a/tablette.css
+++ b/tablette.css
@@ -74,7 +74,7 @@
         text-align: center;
         width: 100%;
         border-bottom: 3px solid #f2f2f2;
-        padding-bottom: 10px;       
+        padding-bottom: 15px;       
     }
 
     header span:hover
@@ -176,11 +176,16 @@
     }
 
     .filtre
-    {        
+    {   
         margin-top: 15px;
         margin-left: 10%;
         justify-content: space-around;   
-        margin-right: -15%;    
+        width: 30%; 
+    }
+
+    .logo
+    {
+        max-width: 66px;
     }
 
     #information
@@ -263,6 +268,11 @@
        height: 115px;       
     } 
 
+    .card-image img
+    {
+      min-height: 0;
+    }
+
    .card-description
     {
        height: 75px;
@@ -339,14 +349,12 @@
 
    .card-content-description h2
     {
-
        font-size: 1.25em;
     }
 
    .card-content-description p
     {
        font-size: 1em;
-       
     }
 
     .content-description
@@ -373,41 +381,36 @@
     }
 
   #features-Marseille
-    {       
-       width: 100%;
-       display: flex;
-       flex-wrap: wrap;
+    {      
        flex-direction: column;
+       width: 452px;  
+       margin: 0 auto;
     }
 
    .card-features-Marseille
     {
-       margin-left: 20%;
-       margin-right: auto; 
-       flex-wrap: wrap;
-       width: 375px;
+       width: 100%;
        min-height: 190px;
-       display: block;
        margin-top: 15px; 
-       margin-bottom: 45px;       
+       margin-bottom: 45px;              
     }
  
    .features 
     {    
-       width: 120%;
-       height: 180px;
+       width: 99.5%;
+       height: 180px;       
     }
 
    #features-2-3
     {
-       width: 120%;
+       width: 99.5%;
        height: 180px;  
        margin-top: -30px;     
     }
 
    #features-1-3
     {
-       width: 120%;
+       width: 99.5%;
        height: 180px;
        margin-top: 40px;
        margin-bottom: -15px;
